--- a/views/404.html
+++ b/views/404.html
@@ -3,13 +3,41 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css"/>
+  <link rel="stylesheet" href="/style.css"/>
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <title>404 Page</title>
+  <meta name="description" content="404 Page">
+  <meta name="author" content="404 Page">
 
 </head>
 
 <body>
+  <div>
+    <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
+      <a class="pure-menu-heading title" href="/">Michael Fulton</a>
+      <div style="flex-grow:2;"></div>
+      <ul class="pure-menu-list">
+        <li class="pure-menu-item"><a href="/resume" target="_blank" class="pure-menu-link pure-menu-heading">Resume</a></li>
+        <li class="pure-menu-item"><a href="/contact" class="pure-menu-link pure-menu-heading">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+  <br><br><br><br>
+  <div class="container">
+    <div class="row">
+      <div class="col-mid-8">
+        <div class="jumbotron">
+          <h1>There Was A Problem</h1>
+          <p>
+          Something went wrong, and the page could not be loaded.
+          </p>
+        </div>
+      </div>
+  </div>
+
+
+
 </body>
 </html>
