--- a/views/index.html
+++ b/views/index.html
@@ -14,12 +14,11 @@
 <body>
   <div>
     <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-      <a class="pure-menu-heading title" href="#">Michael Fulton</a>
+      <a class="pure-menu-heading title" href="/">Michael Fulton</a>
       <div style="flex-grow:2;"></div>
       <ul class="pure-menu-list">
         <li class="pure-menu-item"><a href="/resume" target="_blank" class="pure-menu-link pure-menu-heading">Resume</a></li>
-        <li class="pure-menu-item"><a href="https://github.com/fultonms" target="_blank" class="pure-menu-link"><img src="github.png"></a></li>
-        <li class="pure-menu-item"><a href="https://www.linkedin.com/in/michael-fulton-57b05595" target="_blank" class="pure-menu-link"><img src="linkedin.png"></a></li>
+        <li class="pure-menu-item"><a href="/contact" class="pure-menu-link pure-menu-heading">Contact</a></li>
       </ul>
     </div>
   </div>
@@ -28,13 +27,9 @@
     <div class="row">
       <div class="col-mid-8">
         <div class="jumbotron">
-          <h1>Michael Scott Fulton</h1>
           <p>
-          I'm a computer scientist from Clarkson University. I'm currently building this webpage from scratch, teaching myself Node, Express.js, Angular,
-          and a whole host of over web technologies as I go.  This website will slowly be gaining functionality and pages as time goes by, but for now 
-          feel free to check out my resume by clicking the link below.
+          This website is currently under construction.
           </p>
-          <p><a class="btn btn-primary btn-lag" href="/resume" role="button">Check Out My Resume!</a></p>
         </div>
       </div>
   </div>
